--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,9 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
+
         <variable
             name="sharedViewModels"
             type="com.kreativesquadz.billkit.ui.home.tab.SharedViewModel" />
+        
+        <variable
+            name="isItemAvailable"
+            type="Boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,6 +63,36 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="200dp"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                android:visibility="@{isItemAvailable ? View.VISIBLE : View.GONE}"
+                android:background="@color/background_color">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/red"
+                    android:text="Clear Order"
+                    android:layout_marginStart="@dimen/_10dp"
+                    android:id="@+id/btnClearItems"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textColor="@color/text_color_main"
+                    android:text='@{"Items : " + sharedViewModels.getInvoiceItemCount()}'
+                    android:gravity="end"
+                    android:layout_marginEnd="40dp"
+                    android:layout_marginStart="@dimen/_10dp"
+                    android:id="@+id/tvItemsCount"/>
+
+            </LinearLayout>
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
