--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-
-
+        <import type="android.view.View"/>
+        <variable
+            name="isCameraOpen"
+            type="Boolean" />
     </data>
 
     <RelativeLayout
@@ -236,6 +238,17 @@
 
             </LinearLayout>
         </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:visibility="@{isCameraOpen ? View.VISIBLE : View.GONE}"
+            android:layout_margin="@dimen/_10dp">
+            <androidx.camera.view.PreviewView
+                android:id="@+id/preview_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </LinearLayout>
 
 
 
