--- a/app/src/main/res/layout/item_bill_invoice_history.xml
+++ b/app/src/main/res/layout/item_bill_invoice_history.xml
@@ -4,10 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="android.widget.TextView" />
+
+        <import type="android.view.View"/>
         <import type="com.kreativesquadz.billkit.adapter.BindingAdaptersKt" />
         <variable
             name="invoice"
             type="com.kreativesquadz.billkit.model.Invoice" />
+
+        <variable
+            name="isReturned"
+            type="Boolean" />
+
 
     </data>
 
@@ -18,73 +25,97 @@
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
         >
-        <LinearLayout
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/_10dp"
-            android:orientation="vertical">
+            android:layout_height="70dp">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvInvoiceID"
-                    android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginStart="10dp"
-                    android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_home_item"
-                    android:text="@{invoice.id}"
-                    tools:text="2000"/>
+                    android:weightSum="2"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/item_name"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_home_item"
-                    android:gravity="end|center"
-                    android:layout_marginEnd="10dp"
-                    android:text="@{invoice.totalItems}"
-                    tools:text="2000"/>
+                    <TextView
+                        android:id="@+id/tvInvoiceID"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_home_item"
+                        android:text="@{invoice.id}"
+                        tools:text="2000"/>
+
+                    <TextView
+                        android:id="@+id/item_name"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_home_item"
+                        android:gravity="end|center"
+                        android:layout_marginEnd="10dp"
+                        android:text="@{invoice.totalItems}"
+                        tools:text="2000"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/time"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_home_item"
+                        android:layout_marginStart="10dp"
+                        android:text="@{invoice.invoiceTime}"
+                        tools:text="2000"/>
+
+                    <TextView
+                        android:id="@+id/totalAmount"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textColor="@color/text_color_main"
+                        android:textSize="@dimen/txt_home_item"
+                        android:gravity="end|center"
+                        android:layout_marginEnd="10dp"
+                        android:text="@{invoice.totalAmount}"
+                        tools:text="2000"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/time"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_home_item"
-                    android:layout_marginStart="10dp"
-                    android:text="@{invoice.invoiceTime}"
-                    tools:text="2000"/>
-
-                <TextView
-                    android:id="@+id/totalAmount"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textColor="@color/text_color_main"
-                    android:textSize="@dimen/txt_home_item"
-                    android:gravity="end|center"
-                    android:layout_marginEnd="10dp"
-                    android:text="@{invoice.totalAmount}"
-                    tools:text="2000"/>
-            </LinearLayout>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="      Returned      "
+                app:splitText2="@{invoice.status}"
+                android:rotation="-45"
+                android:textSize="12sp"
+                android:layout_marginStart="-20dp"
+                android:layout_marginTop="-20dp"
+                android:textColor="@color/text_color_heading_reverse"
+                android:background="@color/colorPrimary"
+                />
 
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 </layout>
